--- a/CSS/02CSS/Base02/styleList.css
+++ b/CSS/02CSS/Base02/styleList.css
@@ -1,3 +1,10 @@
+.title{
+list-style-type: upper-roman;
+width: 350px;
+}
+li{
+    list-style-type: lower-roman;
+}
 p{
     max-height: 80px;
     background-color: black;
